Update  index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="maindiv">
     <div class="navbar">
         <div class="micrologo">
-            <img src="assets/RE1Mu3b.png" alt="">
+            <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31" alt="">
         </div>
         <div class="nav1">
             <p>Microsoft</p>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="adshot">
-        <img src="assets/hotad.avif" alt="">
+        <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-M1-Family-02-1:VP5-1920x600" alt="">
         <div class="card">
             <p>Surface Pro 9 <br>
                 Tablet versatility and laptop power — all in one ultra-portable device
@@ -40,44 +40,44 @@
     <div class="dev-logos">
         
          <div class="dlogo">
-            <img class="imgi" src="assets/M365.svg" alt="">
+            <img class="imgi" src="https://cdn-dynmedia-1.microsoft.com/is/content/microsoftcorp/Link-List-Icons-Microsoft-365?wid=40&hei=40" alt="">
             <a href="">Choose your Microsoft 365</a>
         </div>
         <div class="dlogo">
-            <img class="imgi" src="assets/XBOX.svg" alt="">
+            <img class="imgi" src="https://cdn-dynmedia-1.microsoft.com/is/content/microsoftcorp/Link-List-Icons-Xbox-Games-Consoles?wid=40&hei=40" alt="">
             <a href="Shop Xbox">Shop Xbox</a>
         </div>
         <div class="dlogo">
-            <img class="imgi" src="assets/M365.svg" alt="">
+            <img class="imgi" src="https://cdn-dynmedia-1.microsoft.com/is/content/microsoftcorp/Link-List-Icons-Microsoft-365?wid=40&hei=40" alt="">
             <a href="">Get Windows 11</a>
         </div>
         <div class="dlogo"> 
-            <img class="imgi" src="assets/surf-dev.svg" alt="">
+            <img class="imgi" src="https://cdn-dynmedia-1.microsoft.com/is/content/microsoftcorp/Link-List-Icons-Surface-Devices?wid=40&hei=40" alt="">
             <a href="">Explore Surface devices</a>
     </div>
     </div>
 
     <div class="ad-cards">
         <div class="card-info">
-            <img src="assets/cardimg1.jpeg" alt="">
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-M1-Platinum-01-1?wid=380&hei=213&fit=crop" alt="">
             <p class="ad-p-head">Surface Laptop 5</p>
             <p class="ad-p-head2"> <br>
                 Sophisticated style and multitasking speed powered by 12th Gen Intel® Core, with Windows 11.</p>
         </div>
         <div class="card-info">
-            <img src="assets/cardimg2.webp" alt="">
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Surface-Laptop-Studio-01-CP?wid=380&hei=213&fit=crop" alt="">
             <p class="ad-p-head">Surface Laptop Studio</p>
             <p class="ad-p-head2">
                 Flex your creative muscle on the most powerful Surface Laptop. Now available with Windows 11.</p>
         </div>
         <div class="card-info">
-            <img src="assets/cardimg.webp" alt="">
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-XSX-CP-Xbox-Series-X?wid=380&hei=213&fit=crop" alt="">
             <p  class="ad-p-head">Xbox Series X</p>
             <p class="ad-p-head2">
                 The fastest, most powerful Xbox ever.</p>
         </div>
         <div class="card-info">
-            <img src="assets/cardimg4.avif" alt="">
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Microsoft-365-Lifestyle-Sandstone-Icon-Toss?wid=380&hei=213&fit=crop" alt="">
             <p class="ad-p-head">Maximise the everyday with Microsoft 365</p>
             <p  class="ad-p-head2">
                 Get online protection, secure cloud storage and innovative apps designed to fit your needs – all in one plan.</p>
@@ -86,7 +86,7 @@
 
 
     <div class="xbox-ad">
-        <img class="xbox-ad-img-lar" src="assets/getxbox.webp" alt="">
+        <img class="xbox-ad-img-lar" src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-XSS-Hero-Xbox-Series-S:VP5-1596x600" alt="">
         
         <div class="xbox-text-ad">
             <p class="xbox-ad1">Xbox Series S</p>
@@ -100,25 +100,25 @@
 
     <div class="ad-cards">
         <div class="card-info">
-            <img src="assets/fb1.avif" alt="">
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-Surf-CP-SurfaceFamilyForBusiness?wid=380&hei=213&fit=crop" alt="">
             <p class="ad-p-head">Surface for Business</p>
             <p class="ad-p-head2"> <br>
                 No matter what you do, there’s a Surface to help you do it.</p>
         </div>
         <div class="card-info">
-            <img src="assets/fb2.webp" alt="">
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-CP-Microsoft-Teams-Commercial?wid=380&hei=213&fit=crop" alt="">
             <p class="ad-p-head">Get Microsoft Teams for free</p>
             <p class="ad-p-head2">
                 Online meetings, chat and shared cloud storage – all in one place.</p>
         </div>
         <div class="card-info">
-            <img src="assets/fb3.jpeg" alt="">
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Windows-11-Business?wid=380&hei=213&fit=crop" alt="">
             <p  class="ad-p-head">Windows 11 for business</p>
             <p class="ad-p-head2">
                 Designed for hybrid work. Powerful for employees. Consistent for IT. Secure for all.</p>
         </div>
         <div class="card-info">
-            <img src="assets/fb4.avif" alt="">
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Azure-AI-Bloom?wid=380&hei=213&fit=crop" alt="">
             <p class="ad-p-head">Join the era of AI
                </p>
             <p  class="ad-p-head2">
