--- a/index.html
+++ b/index.html
@@ -19,27 +19,36 @@
         <p>Teams</p>
         <p>Copilot</p>
         <p>Windows</p>
-        <p>SurfaceXboxSupport</p>
+        <p>Surface</p>
+        <p>Xbox</p>
+        <p>Support</p>
         </div>
 
         <div class="nav2">
-            <p>all microsoft</p>
+            <div class="all-microsoft nav2-ic">
+                <p>All Microsoft</p>
+            </div>
+            <div class="search nav2-ic">Search
+                <img class="nav2-icon-img" src="https://cdn.iconscout.com/icon/free/png-512/free-search-1436-527970.png?f=webp&w=256" alt="">
+            </div>
+            <div class="cart nav2-ic">Cart</div>
+            <div class="signin nav2-ic">Sign in</div>
         </div>
     </div>
 
     <div class="adshot">
         <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-M1-Family-02-1:VP5-1920x600" alt="">
         <div class="card">
-            <p>Surface Pro 9 <br>
-                Tablet versatility and laptop power — all in one ultra-portable device
+            <p class="card-p-1">Surface Pro 9 <br>
                 </p>
+                <p> Tablet versatility and laptop power — all in one ultra-portable device</p>
                 <button class="learn-more">Learn More</button>
         </div>
     </div>
 
     <div class="dev-logos">
         
-         <div class="dlogo">
+         <div class="dlogo1 dlogo">
             <img class="imgi" src="https://cdn-dynmedia-1.microsoft.com/is/content/microsoftcorp/Link-List-Icons-Microsoft-365?wid=40&hei=40" alt="">
             <a href="">Choose your Microsoft 365</a>
         </div>
@@ -128,9 +137,9 @@
 
     <div class="follow-mic-img">
         <p class="follow-mic">Follow Microsoft</p>
-        <img class="follow-icons-img" src="assets/fbicon.avif" alt="">
-        <img class="follow-icons-img" src="assets/xicons.webp" alt="">
-        <img class="follow-icons-img" src="assets/yticons.webp" alt="">
+        <img class="follow-icons-img" src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Facebook%202x?scl=1" alt="">
+        <img class="follow-icons-img" src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/icon-MSCOM-X-64x64?scl=1" alt="">
+        <img class="follow-icons-img" src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/YouTube%202x?scl=1" alt="">
     </div>
 
     <div class="back-to-top">
